--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ ktor = "2.3.12"
 datetime = "0.6.1"
 json = "1.7.2"
 ksp = "2.0.20-1.0.24"
-room = "2.6.1"
+room = "2.7.0-alpha07"
 truth = "1.4.4"
 runner = "1.6.2"
 turbine = "1.1.0"
